GET /api/visits API 개발-2